WICKET-6913 bytebuddy for wicket-9.x
optional via system parameter wicket.ioc.proxyfactory